<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundt"
    tools:context=".ui.main.auth.loginFragment">


        <EditText
            android:id="@+id/edEmailLogin"
            android:layout_width="362dp"
            android:layout_height="48dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/no_btn"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/quran_font"
            android:gravity="center"
            android:hint="@string/enteremail"
            android:minHeight="48dp"
            android:paddingStart="30dp"
            android:textColor="@color/Tiffany"
            android:textColorHint="@color/Tiffany"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.334"
            tools:ignore="SpeakableTextPresentCheck" />


        <EditText
            android:id="@+id/edPassWordLogin"
            android:layout_width="362dp"
            android:layout_height="48dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/no_btn"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/quran_font"
            android:gravity="center"
            android:hint="@string/passwordenter"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="30dp"
            android:textColor="@color/Tiffany"
            android:textColorHint="@color/Tiffany"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="280dp"
            android:layout_height="218dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />


        <Button
            android:id="@+id/loginrButton"
            android:layout_width="197dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/no_btn"
            android:backgroundTint="@null"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72">


        </Button>

        <TextView
            android:id="@+id/CreateAccount"
            android:layout_width="250dp"
            android:layout_height="29dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/home"
            android:gravity="center"
            android:text="@string/newaccount"
            android:textColor="@color/Tiffany"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.863" />

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="250dp"
            android:layout_height="29dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/home"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:textColor="@color/Tiffany"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.912" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="250dp"
            android:layout_height="29dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/home"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/Tiffany"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="411dp" />



</androidx.constraintlayout.widget.ConstraintLayout>













