<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layoutDirection="rtl"
            android:padding="20dp"
            tools:context=".ui.main.fragment.MainFragment"
            tools:ignore="HardcodedText">


            <ImageView
                android:id="@+id/textView7"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/home_guideline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


            <Button
                android:id="@+id/athakarButtom"
                android:layout_width="277dp"
                android:layout_height="130dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/main_btn_bg"
                android:fontFamily="@font/home"
                android:text="@string/Alazakar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <Button
                android:id="@+id/calenderButton"
                android:layout_width="274dp"
                android:layout_height="125dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/main_btn_bg"
                android:fontFamily="@font/home"
                android:text="@string/Hijricalendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/athakarButtom" />

            <Button
                android:id="@+id/qiblaButton"
                android:layout_width="285dp"
                android:layout_height="122dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/main_btn_bg"
                android:fontFamily="@font/home"
                android:text="@string/Qibla"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderButton"
                app:layout_constraintVertical_bias="0.2" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</RelativeLayout>
