<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundt"
    tools:context=".ui.main.auth.SigupFragment">


    <EditText
        android:id="@+id/edEmailRegister"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:background="@drawable/no_btn"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enteryouremail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:textColor="@color/Tiffany"
        android:textColorHint="@color/Tiffany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <EditText
        android:id="@+id/edProfile"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:background="@drawable/no_btn"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:gravity="center"
        android:hint="الرجاء ادخال اسم المستخدم"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:textColorHint="@color/Tiffany"
        android:textColor="@color/Tiffany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edPassWordRegister"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:background="@drawable/no_btn"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:gravity="center"
        android:hint="الرجاء ادخال الرقم السري "
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:textColor="@color/Tiffany"
        android:textColorHint="@color/Tiffany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edPassWordRegister2"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/no_btn"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:gravity="center"
        android:hint="الرجاء ادخال الرقم السري مرة اخرى"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:textColorHint="@color/Tiffany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="217dp"
        android:layout_height="51dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:background="@drawable/no_btn"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="357dp"
        android:layout_height="221dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/tvloginlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/home"
        android:text="@string/haveaccount"
        android:textColor="@color/Tiffany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/Skip"
        android:layout_width="250dp"
        android:layout_height="29dp"
        android:fontFamily="@font/home"
        android:text="@string/skip"
        android:textColor="@color/Tiffany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="Skip" />

</androidx.constraintlayout.widget.ConstraintLayout>

